--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -56,7 +56,7 @@
             {% endif %}
 
               <li class="nav-item">
-                <a class="nav-link navbarFonts" aria-current="page" href="{% url 'profile' %}">Mi Perfil </a>
+                <a class="nav-link navbarFonts" aria-current="page" href="{% url 'profile' %}"> Editar perfil </a>
               </li> 
 
             <li class="nav-item">
