some stuff added

--- a/registration/templates/registration/reservation_update.html
+++ b/registration/templates/registration/reservation_update.html
@@ -2,54 +2,52 @@
 
 {% block content %}
 
-<div class='container-md'>
-    <h1 class="display-4"> {{ field.name }} </h1>
-    <p>Jugadores por lado: {{ field.playersPerSide }}</p>     
+    <div class='container-md'>
+        <h1 class="display-4"> {{ field.name }} </h1>
 
-    <p>Tipo de suelo: {{ field.groundType }}</p>
 
-    <h4>Escoger fecha</h4>
-    <form method="post">
-    {% csrf_token %}
-        <label for="date">Fecha:</label>
-        <input type="date" id="datePicker" name="date" value="{{ selected_date|date:"Y-m-d" }}">
-        <input type="hidden" name="field_id" value="{{ field.id }}">
-        <input type="submit" value="Seleccionar fecha">
-    </form>
+        <h4>Escoger fecha</h4>
+        <form method="post" action="{% url 'index' field.id %}">
+        {% csrf_token %}
+            <label for="date">Fecha:</label>
+            <input type="date" id="datePicker" name="date" value="{{ selected_date|date:"Y-m-d" }}">
+            <input type="hidden" name="field_id" value="{{ field.id }}">
+            <input type="submit" value="Seleccionar fecha">
+        </form>
 
-    <div class="row">
-        {% for time in available_times %}
-            <div class='col-md-4'>
-                <div class='card' style="margin: 20px auto; max-width: 300px; height: 130px;">
-                    <div class="row">
-                        <div class="col-12 text-center">
-                            <h3>{{ time }} hrs</h3>
-                            <p>Precio: ${{ field.price }}</p>
-                        </div>
-                    </div>
-                    <form method="post" action="{% url 'confirm_reservation' reservation.id %}">
-                        {% csrf_token %}
+        <div class="row">
+            {% for time in available_times %}
+                <div class='col-md-4'>
+                    <div class='card' style="margin: 20px auto; max-width: 300px; height: 130px;">
                         <div class="row">
-                            <div class="col-12">
-                                <input type="hidden" name="date" value="{{ selected_date|date:"Y-m-d" }}">
-                                <input type="hidden" name="time" value="{{ time }}">
-                                <input type="hidden" name="field_id" value="{{ field.id }}">
-                            </div>
-                        </div>
-                        <div class="row">
-                        
                             <div class="col-12 text-center">
-                                <input type="submit" class="btn btn-primary" value="Cambiar">
+                                <h3>{{ time }} hrs</h3>
+                                <p>Precio: ${{ field.price }}</p>
                             </div>
                         </div>
-                    </form>
+                        <form method="post" action="{% url 'index' field.id %}">
+                            {% csrf_token %}
+                            <div class="row">
+                                <div class="col-12">
+                                    <input type="hidden" name="date" value="{{ selected_date|date:"Y-m-d" }}">
+                                    <input type="hidden" name="time" value="{{ time }}">
+                                    <input type="hidden" name="field_id" value="{{ field.id }}">
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-12 text-center">
+                                    <input type="submit" class="btn btn-primary" value="Reservar horario">
+                                </div>
+                            </div>
+                        </form>
+                    </div>
                 </div>
-            </div>
-        {% endfor %}
+            {% endfor %}
+        </div>
     </div>
-</div>
 
 
-{% include 'core/footer.html' %}
+    {% include 'core/footer.html' %}
+
 
 {% endblock %}
