--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -11,6 +11,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.payment/3.0.0/jquery.payment.min.js"></script>
     {% load static %}
     <link rel="stylesheet" href="{% static 'core/css/style.css' %}">
+    <!-- Option 1: Include in HTML -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 
 
     <title> Practice </title>
