--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -6,9 +6,9 @@
 <div style="margin-bottom: 50px;">
     
     <div style="background: url({% static 'core/img/soccer-open-field.jpg' %}) no-repeat center center; background-size: cover; text-align: center; padding: 20px;">
-        <h1 class='home-title'> Quieres reservar una cancha para jugar? reserva una con nosotros! </h1>
+        <h1 class='home-title'> ¿Quieres reservar una cancha para jugar? reserva una con nosotros! </h1>
     
-        <h3 class='home-title2'> Distintos clubes para escoger </h3>
+        <h3 class='home-title2'> Tienes distintos clubes para escoger </h3>
         
         <br>
 
