--- a/registration/templates/registration/login.html
+++ b/registration/templates/registration/login.html
@@ -28,7 +28,7 @@
             </div>
             
             <div class="container d-flex justify-content-center mt-3">
-                <p>Nuevo aqui? <a href="{% url 'signup' %}"> Crear cuenta</a></p>
+                <p>¿Nuevo aquí? <a href="{% url 'signup' %}"> Crear cuenta</a></p>
             </div>
 
         </div> <!-- Este es el div que faltaba cerrar -->
