--- a/registration/templates/registration/password_recovery.html
+++ b/registration/templates/registration/password_recovery.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 
-    <div class="container-md">
-        <h1>Recuperar contraseña view</h1>
+    <div class="container-md" style="height: 424px;">
+        <h1 style="margin-top: 30px;" class="display-4">Recuperar contraseña view</h1>
 
     {% for message in messages %}
         <div class="alert alert-{{ message.tags }}">
@@ -22,9 +22,11 @@
             </div>
         {% endfor %}
 
-        <button type="submit" class="btn btn-primary">Enviar</button>
+        <button style="margin-top: 40px;" type="submit" class="btn btn-primary">Enviar</button>
 
     </form>
     </div>
+
+{% include 'core/footer.html' %}
 
 {% endblock %}
