--- a/canchas/templates/canchas/client_reservation_deleted_successfully.html
+++ b/canchas/templates/canchas/client_reservation_deleted_successfully.html
@@ -2,9 +2,11 @@
 
 {% block content %}
 
-    <div class="container-md">
+    <div class="container-md" style="height: 455px;">
 
         <h1 class="display-4"> Reserva borrada con exito </h1>
+
+        <a href="{% url 'home' %}" class="btn btn-primary">Volver al inicio</a>
 
     </div>
 
