--- a/registration/templates/registration/change_password.html
+++ b/registration/templates/registration/change_password.html
@@ -1,10 +1,13 @@
 {% extends 'core/base.html' %}
 
 {% block content %}
-    <h2>Cambiar contraseña</h2>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Cambiar contraseña</button>
-    </form>
+    <div class="container-md">
+        <h2 style="margin-top: 30px; margin-bottom: 30px;" class="display-4">Cambiar contraseña</h2>
+
+        <form method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit">Cambiar contraseña</button>
+        </form>
+    </div>
 {% endblock %}
