--- a/registration/templates/registration/password_sent.html
+++ b/registration/templates/registration/password_sent.html
@@ -5,8 +5,8 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <h1>Contasena enviada al correo</h1>
-            <p>Se han enviado los datos para el tema de su contrasena</p>
+            <h1>Contraseña enviada al correo</h1>
+            <p>Se han enviado los datos para entrar nuevamente con una clave provisoria</p>
         </div>
     </div>
 
