--- a/registration/templates/registration/profile.html
+++ b/registration/templates/registration/profile.html
@@ -21,7 +21,7 @@
 
                     <button style="margin-right: 10px;" type="submit" class="btn btn-primary">Guardar</button>
 
-                    <a class="btn btn-primary" href="{% url 'change_password' %}">Cambiar contrasena</a>
+                    <a class="btn btn-primary" href="{% url 'change_password' %}">Cambiar contraseña</a>
 
                     {% comment %} <a class="btn btn-danger" href="#">Eliminar cuenta</a> {% endcomment %}
 
