--- a/reservation/templates/reservation/reservation_payment_success.html
+++ b/reservation/templates/reservation/reservation_payment_success.html
@@ -4,7 +4,7 @@
     <div style="margin-top: 30px;" class="container-md">
         <h2 class="display-4">Pago realizado con exito </h2>
 
-        <p style="margin-top: 30px;" class="display-6" >Tu pedido #{{ last_reservation.id }} </p>
+        <p style="margin-top: 30px;" class="display-6" >Reserva #{{ last_reservation.id }} </p>
 
         <div class="card" style="width: 18rem; display: block;">
             <img src="{{ last_reservation.reservation.field.fieldPhoto.url }}" class="card-img-top" alt="...">
