--- a/registration/templates/registration/sign_up.html
+++ b/registration/templates/registration/sign_up.html
@@ -16,6 +16,11 @@
                             <label for="{{ field.id_for_label }}">{{ field.label }}</label>
                             <input type="{{ field.field.widget.input_type }}" class="form-control" id="{{ field.id_for_label }}" name="{{ field.html_name }}" {% if field.field.required %}required{% endif %}>
                         {% endif %}
+                        {% if field.errors %}
+                            <div class="alert alert-danger">
+                                {{ field.errors }}
+                            </div>
+                        {% endif %}
                     </div>
                 {% endfor %}
 
