--- a/registration/templates/registration/login.html
+++ b/registration/templates/registration/login.html
@@ -31,7 +31,7 @@
                 <p>¿Nuevo aquí? <a href="{% url 'signup' %}"> Crear cuenta</a></p>
             </div>
 
-        </div> <!-- Este es el div que faltaba cerrar -->
+        </div>
 
     </form>
 </div>
