--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -66,7 +66,7 @@
             <li class="nav-item">
               <form method="post" action="{% url 'logout' %}">
                 {% csrf_token %}
-                <button type="submit" class="btn btn-danger navbarFonts"> Logout </button>
+                <button  style="white-space: nowrap;" type="submit" class="btn btn-danger navbarFonts"> Cerrar sesion </button>
               </form>
             </li>
 
@@ -90,7 +90,7 @@
 
     <div>
         
-        <!--Cargando contenido dinamico-->
+        
         {% block content %}{% endblock %}
     </div>
 </body> 
