--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -26,7 +26,7 @@
     <div class="card" style="width: 18rem; margin-right: 20px;">
         
         {% if club.clubPhoto %}
-            <img src="{{ club.clubPhoto.url }}" class="card-img-top" alt="...">
+            <img style="object-fit: cover; max-height: 290px;" src="{{ club.clubPhoto.url }}" class="card-img-top" alt="...">
         {% else %}
             <img src="{% static 'core/img/noPhoto.jpg' %}" class="card-img-top" alt="...">
         {% endif %}
