--- a/reservation/templates/reservation/reservation_payment.html
+++ b/reservation/templates/reservation/reservation_payment.html
@@ -37,7 +37,7 @@
                 <div class="input">
                     {{ form.as_p }}
 
-                    <input class="form-submit" type="submit" value="Pay Now" />
+                    <input class="btn btn-primary" type="submit" value="Pagar" />
                 </div>
             </div>
         </form>
